<resources>
    <string name="app_name">KTransport-APP</string>
    <string name="description_info">Info</string>
    <string name="retake_picture">Retake picture</string>
    <string name="add_picture">Add more picture</string>
    <string name="request_permission">This sample needs camera &amp; storage permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="camera">Camera</string>
    <string name="action_capture">Capture</string>
    <string name="action_exit">Exit</string>
    <string name="submit_details">Submit Details</string>
    <string name="reg_number">Reg Number</string>
    <string name="course">Course</string>
    <string name="semester">Semester</string>
    <string name="click_on_camera_icon">Click on the camera icon to take pictures.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="student_registration_menu">Student\'s Registration menu</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="user_name">User Name</string>
    <string name="sign_up">Sign up</string>
    <string name="user_password">Password</string>
    <string name="signin">Signin</string>
    <string name="login">Login</string>
    <string name="create_an_account">Create an Account</string>
    <string name="action_profile">Profile</string>
    <string name="available_stages">Stages</string>
    <string name="add_stages">Add Stages</string>
    <string name="add_messages">Add Notification</string>
    <string name="provide_your_username_and_password_to_continue">Provide your username and Password to continue</string>
    <string name="registered_conductor">Registered Conductors</string>
    <string name="student_chatt">Student ChatRoom</string>
    <string name="conductor_chatroom">Conductor ChatRoom</string>
    <string name="stage_name">Stage Name</string>
    <string name="Stage_descriptions">Stage Descriptions</string>
    <string name="add_notifications">Add Notifications</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="notifications">Notifications</string>
    <string name="available_notifications">Available Notifications</string>
    <string name="view_replies">View Replies</string>
    <string name="replies">Replies</string>
</resources>
