<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ic_launcher_background"
    android:padding="@dimen/activity_horizontal_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.john.c_transportation.activities.MainActivity_C">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/square"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="20sp"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:text="Provide the Stage Details bellow"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:layout_marginTop="30sp"
            android:padding="@dimen/activity_horizontal_margin">
            <ImageView
                android:id="@+id/ivContactItem1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:src="@drawable/ic_action_info" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tvNumber4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@id/ivContactItem1"
                android:layout_toRightOf="@id/ivContactItem1">
                <EditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/stage_name"
                    android:inputType="textCapWords"
                    android:ems="10"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#212121" />
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:padding="@dimen/activity_horizontal_margin">
            <ImageView
                android:id="@+id/ivContactItem12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:src="@drawable/ic_action_info" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tvNumber42"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@id/ivContactItem12"
                android:layout_toRightOf="@id/ivContactItem12">
                <EditText
                    android:id="@+id/input_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Stage_descriptions"
                    android:inputType="textCapWords"
                    android:ems="10"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#212121" />
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center"
            android:layout_marginTop="30sp"
            android:padding="@dimen/activity_horizontal_margin">
            <Button
                android:id="@+id/btn_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_stages"
                android:drawableLeft="@android:drawable/ic_input_add"
                android:background="@drawable/button"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@id/ivContactItem100"
                android:layout_toRightOf="@id/ivContactItem100"/>
        </RelativeLayout>

    </LinearLayout>



</LinearLayout>
